更新商品頁面

--- a/app/products/components/_styles/EquipmentRental.module.css
+++ b/app/products/components/_styles/EquipmentRental.module.css
@@ -27,7 +27,7 @@
 
   .contentTitle{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
   }
   
   @media (width <= 991px) {
