--- a/app/products/components/_styles/HeroSection.module.css
+++ b/app/products/components/_styles/HeroSection.module.css
@@ -1,18 +1,23 @@
 .hero {
   color: #fff;
   white-space: nowrap;
-  text-transform: uppercase;
-  flex-direction: column;
   /* max-width: 1440px; */
-  height: 400px;
+  height: 500px;
   padding: 70px;
   font-size: 40px;
   font-weight: 700;
-  display: flex;
   position: relative;
   overflow: hidden;
-  margin: auto;
-  margin-top: 53px;
+}
+.hero::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); /* 灰色覆蓋層 */
+  z-index: 1;
 }
 
 .heroBackground {
@@ -28,7 +33,7 @@
   width: 300px;
   height: 300px;
   position: relative;
-  z-index: 1;
+  
   /* background-image: url(/img/Ellipse36-2.png); */
   background-size: contain;
   background-position: center;
@@ -36,6 +41,7 @@
   display: flex;
   justify-content: left;
   align-items: center;
+  z-index: 2;
 }
 
 
