--- a/app/products/product-detail/_components/_styles/ProductDetail.module.css
+++ b/app/products/product-detail/_components/_styles/ProductDetail.module.css
@@ -7,6 +7,7 @@
     overflow: hidden;
     margin: auto;
     width: 1440px;
+    max-width: 1440px;
     /* justify-content: center; */
   }
   
@@ -204,10 +205,13 @@
 
   .relatedProducts{
     width: 70%;
+    /* display: flex;
+    flex-direction: row; */
   }
   
   .relatedProductsGrid {
     display: flex;
+    flex-direction: row;
     gap: 20px;
   }
   
@@ -216,6 +220,12 @@
     color: rgb(141, 138, 138);
     cursor: pointer;
   }
+/* 
+  .slideItem {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+  } */
   @media (width <= 991px) {
     .container { padding: 100px 11px; }
     .productSection, .productInfo, .productDescription, .cartActions, .relatedProducts { padding: 0 20px; }
