--- a/app/vedios/components/_styles/EquipmentRental.module.css
+++ b/app/vedios/components/_styles/EquipmentRental.module.css
@@ -15,21 +15,16 @@
     justify-content: center;
     align-items: stretch;
     max-width: 1440px;
-    min-height: 1500px;
     padding: 30px 0;
     display: flex;
     position: relative;
     overflow: hidden;
     margin: auto;
-    /* background-image: url(/img/contentBackground3.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;  */
   }
 
   .contentTitle{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
   }
   
   @media (width <= 991px) {
