--- a/app/carts/data/_styles/data.module.css
+++ b/app/carts/data/_styles/data.module.css
@@ -1,10 +1,10 @@
 .body2 {
     background-color: #ffffff;
+    display: flex;
     flex-direction: column;
     justify-content: start;
     width: 100%;
     font-weight: 400;
-    display: flex;
   }
   .progress {
     display: flex;
@@ -13,8 +13,8 @@
     justify-content: center;
     align-items: center;
     gap: 40px;
-    width: 100%;
-    max-width: 1440px;
+    /* width: 100%;
+    max-width: 1440px; */
     height: 200px;
     /* padding: 40px; */
     font-family:
@@ -58,7 +58,7 @@
   
   .sectionA {
     background-color: transparent;
-    width: 50%;
+    /* width: 50%; */
     padding: 20px;
     margin: auto;
     border-radius: 3px;
