--- a/app/coaches/_components/_styles/coaches-card.module.css
+++ b/app/coaches/_components/_styles/coaches-card.module.css
@@ -98,6 +98,7 @@
     justify-content: center;
     text-decoration: none;
     transition: transform 0.3s ease;
+    cursor: pointer;
   }
   
   .hovered .arrow-circle {
