--- a/app/products/components/_styles/breadcrumb.module.css
+++ b/app/products/components/_styles/breadcrumb.module.css
@@ -44,3 +44,18 @@
     line-height: 60px;
     display: block;
   }
+
+  .active{
+    color: #db6318;
+  }
+
+  /* .breadcrumbItem .activeLink {
+    color: #db6318; 
+  } */
+
+  @media (max-width: 960px) {
+    .breadcrumbContainer {
+      /* flex-direction: column; */
+      width: 100%;
+    }
+  }
