--- a/app/products/components/_styles/ProductGrid.module.css
+++ b/app/products/components/_styles/ProductGrid.module.css
@@ -26,9 +26,17 @@
   margin-left: 1%;
 }
 
-@media (width <= 991px) {
+@media (width <= 1440px) {
   .productGrid {
     max-width: 100%;
     margin-bottom: 10px;
+  }
+}
+
+@media (width <= 960px) {
+  .productGrid {
+    max-width: 100%;
+    margin-bottom: 10px;
+    flex-direction: column;
   }
 }
