--- a/app/products/components/_styles/sort.module.css
+++ b/app/products/components/_styles/sort.module.css
@@ -8,6 +8,7 @@
   /* border-bottom: 1px solid #eee; */
   margin-bottom: 10px;
   align-items: center;
+  
 }
 
 .sortTitle{
@@ -35,7 +36,7 @@
   cursor: pointer;
   position: relative;
   transition: transform 0.3s ease;
-
+  margin: auto;
 }
 
 .btnHome:hover {
@@ -60,15 +61,37 @@
   
 }
 
-@media (width <= 991px) {
+.selectBtn {
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+  font-size: 20px;
+  color: white;
+  background-color: #f87808;
+  border: none;
+  border-radius: 3px;
+  display: none;
+  z-index: 20;
+}
+
+@media (width <= 1200px) {
   .container {
     /* width: 30%; */
     margin-bottom: 10px;
-
-    
   }
   .btnHome{
     width: 70%;
-    font-size: 12px;
+    font-size: 16px;
+  }
+
+}
+
+@media (width <= 960px) {
+  .selectBtn {
+    display: block;
+
+  }
+  .container{
+    width: 100%;
   }
 }
