--- a/app/classes/_components/_styles/calendar.module.css
+++ b/app/classes/_components/_styles/calendar.module.css
@@ -88,7 +88,11 @@
     text-align: center;
     border-radius: 4px;
   }
-  
+
+  .today{
+    color:#ff6600;
+  }
+
   .dayNumber {
     font-size: 28px;
     font-weight: bold;
@@ -125,6 +129,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-right: 5px solid #d35400;
   transition: all 0.3s ease;
+  cursor: pointer;
 }
 .event:not(:first-child){
   margin-top: 5px;
@@ -138,6 +143,25 @@
     font-size: 18px;
     background-color: #adaaaa;
   }
+  .eventFull {
+    background-color: #999;
+    cursor: not-allowed;
+  }
+  
+  .capacity {
+    margin-top: 4px;
+    font-size: 0.85em;
+  }
+  
+  .full {
+    color: #ff4d4f;
+    font-weight: bold;
+  }
+  
+  .available {
+    color: #081a00;
+  }
+  
   
   .time {
     font-size: 16px;
@@ -153,6 +177,11 @@
     margin-top: 8px;
     font-size: 16px;
     opacity: 0.9;
+  }
+  .name {
+    font-size: 17px;
+    color: #fffcfc;
+    margin-top: 5px;
   }
   
   @media (max-width: 768px) {
