Revert "Merge pull request #33 from chia-ching1230/main"
This reverts commit 66a364616bfb2577314fc32d0e31f5264eff4da0, reversing
changes made to 032bf87c3a4628030561e17f4900d17a78ecbebd.

--- a/app/products/components/_styles/search.module.css
+++ b/app/products/components/_styles/search.module.css
@@ -9,7 +9,7 @@
   
   .select {
     /* padding: 3px; */
-    width: 80%;
+    width: 250px;
     border-radius: 3px;
     font-family: "Noto Serif TC", serif;
     font-size: 18px;
@@ -31,17 +31,4 @@
   /* 可以添加懸停效果 */
   .button:hover {
     background-color: #e56c00;
-  }
-
-  @media (width <= 960px) {
-    .searchContainer {
-      width: 80%;
-      padding-left: 20px;
-      padding-right: 20px;
-    }
-
-    .contentTitle{
-      flex-direction: column;
-
-    }
   }
