--- a/app/products/components/_styles/HeroSection.module.css
+++ b/app/products/components/_styles/HeroSection.module.css
@@ -1,6 +1,7 @@
 .hero {
   color: #fff;
   white-space: nowrap;
+  /* max-width: 1440px; */
   height: 500px;
   padding: 70px;
   font-size: 40px;
@@ -15,7 +16,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3); 
+  background-color: rgba(0, 0, 0, 0.3); /* 灰色覆蓋層 */
   z-index: 1;
 }
 
@@ -29,7 +30,11 @@
 }
 
 .heroTitle {
+  width: 300px;
+  height: 300px;
   position: relative;
+  
+  /* background-image: url(/img/Ellipse36-2.png); */
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat; 
@@ -37,30 +42,20 @@
   justify-content: left;
   align-items: center;
   z-index: 2;
-  font-size: 54px;
 }
 
-.heroContent{
-  font-size: 24px;
-}
 
 .headerContain{
-  position: absolute;
-  top: 60%;
+  position: relative;
   z-index: 10;
+
 }
 
-@media (width <= 960px) {
+@media (width <= 991px) {
   .hero {
     max-width: 100%;
+    white-space: initial;
     padding: 100px 20px 110px;
-    font-size: 24px;
-  }
-
-  .heroContent{
-    width: 100%;
-    font-size: 14px;
-    /* height: 50px; */
-    white-space: normal;
+    font-size: 40px;
   }
 }
