--- a/app/carts/data/_styles/button.module.css
+++ b/app/carts/data/_styles/button.module.css
@@ -12,7 +12,7 @@
     font-family: helvetica;
     color: white;
     font-size: 20px;
-    background-color: #e0703c;
+    background-color: #ffb300;
     text-decoration: none;
     border: none;
     cursor: pointer;
@@ -32,7 +32,7 @@
     font-family: helvetica;
     color: white;
     font-size: 20px;
-    background-color: #e0703c;
+    background-color: #ffb300;
     text-decoration: none;
     border: none;
     cursor: pointer;
