--- a/app/friends/_styles/friends.module.css
+++ b/app/friends/_styles/friends.module.css
@@ -1,6 +1,7 @@
 /* Bannner */
 .banner {
   background-image: url('/imgs/friend/banner/friendBanner2000.jpg');
+  /* max-width: 1440px; */
   width: 100%;
   height: 500px;
   display: flex;
@@ -236,11 +237,15 @@
   margin-top: 40px;
   margin-bottom: 20px;
   width: 228px;
-  /* width: 100%; */
   height: 320px;
   padding-top: 79px;
   flex-direction: column;
   justify-content: space-between;
+  transition: all 0.3s;
+}
+.profileCard:hover {
+  transform: scale(1.05);
+  transition: all 0.3s;
 }
 
 .profileCard_container {
