--- a/app/products/[productId]/_components/_styles/ProductDetail.module.css
+++ b/app/products/[productId]/_components/_styles/ProductDetail.module.css
@@ -1,40 +1,41 @@
 .container {
-    /* background-color: #f5f5f5; */
     display: flex;
     flex-direction: column;
-    align-items: stretch;
     padding: 120px 0;
     overflow: hidden;
     margin: auto;
     width: 1440px;
     max-width: 1440px;
-    /* justify-content: center; */
   }
   
   .productSection, .productInfo, .productDescription, .cartActions, .relatedProducts {
     max-width: 100%;
     margin: auto;
   }
+
+  .itemTitle{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
   
   .productSection {
     width:80%;
     display: flex;
     flex-direction: row;
-    /* flex-wrap: wrap; */
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     gap: 10px;
     padding: 0 75px;
     font-family: Inter, -apple-system, Roboto, Helvetica, sans-serif;
     font-weight: 400;
     overflow: hidden;
+    margin: auto;
   }
   
   .productImage, .productInfo {
     width: 50%;
-    min-width: 240px;
-    align-self: stretch;
-    margin: auto 0;
+    margin: auto;
     height: 450px;
   }
   
@@ -49,7 +50,6 @@
     background-color: #f0eeee;
     display: flex;
     flex-direction: column;
-    /* flex-wrap: wrap; */
     justify-content: start;
     align-items: start;
     padding: 30px 45px;
@@ -68,20 +68,18 @@
     color: #000;
     font-size: 35px;
     margin: 5px 0;
-    /* border-bottom: #000 solid 1px; */
   }
 
   .divider {
     border: 1px solid rgb(189, 191, 195);
     width: 100%;
-    /* max-width: 100%; */
     min-height: 1px;
     margin-top: 5px;
   }
   
   
   .productPrice {
-    color: #e76317;
+    color: #0b3760;
     margin: 5px 0;
   }
   
@@ -92,12 +90,10 @@
     font-size: 16px;
     margin:0;
     padding: 15px 0;
-    /* height: 100px; */
+    height: 150px;
   }
   
   .selectionContainer,.cartActions {
-    display: flex;
-    /* flex-wrap: wrap; */
     justify-content: start;
     align-items: center;
     width: 100%;
@@ -108,11 +104,9 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 80px;
-    background-color: white;
+    /* background-color: white; */
     box-sizing: content-box;
-    padding: 5px;
-    margin: 10px 0 25px 0;
+    margin: 10px 0 15px 0;
     text-align: center;
   }
 
@@ -126,9 +120,13 @@
   }
 
   .label{
+    width: 50%;
     height: 40px;
     display: flex;
     align-items: center;
+    font-weight: 700;
+    color: rgb(65, 63, 60);
+    font-size: 18px;
   }
   
   .quantityControls {
@@ -149,8 +147,7 @@
     justify-content: space-between;
     align-items: stretch;
     gap: 20px;
-    width: 90%;
-    margin-bottom: 5px;
+    width: 40%;
     height: 30px;
   }
   
@@ -220,19 +217,28 @@
     color: rgb(141, 138, 138);
     cursor: pointer;
   }
-/* 
-  .slideItem {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-  } */
-  @media (width <= 991px) {
-    .container { padding: 100px 11px; }
-    .productSection, .productInfo, .productDescription, .cartActions, .relatedProducts { padding: 0 20px; }
-    .productInfo { margin-left: 0; }
-    .quantityLabels, .quantityControls, .quantityButton, .addToCartButton, .productCardButton { padding: 10px 20px; }
-    .relatedTitle { margin-left: 10px; }
-    .relatedProductsGrid { flex-direction: column; align-items: stretch; gap: 0; }
-    .productCard { width: 100%; margin-top: 36px; }
+
+
+  @media (width <= 1400px) {
+    .container { width: 85%; }
+    .productSection{width: 100%;}
+  }
+
+  @media (width <= 1200px) {
+    .container { width: 100%; }
+    .productSection{width: 100%;}
+  }
+
+  @media (width <= 960px) {
+    .container { width: 100%; }
+    .productSection{
+      width: 100%;
+      display: block;
+    }
+    .productImage, .productInfo {
+      width: 100%;
+      margin: auto;
+      height: 450px;
+    }
   }
   
