--- a/app/products/[productId]/_components/_styles/breadcrumb.module.css
+++ b/app/products/[productId]/_components/_styles/breadcrumb.module.css
@@ -44,3 +44,20 @@
     line-height: 60px;
     display: block;
   }
+
+  .breadcrumbItem span {
+    text-decoration: none;
+    font-size: 18px;
+    font-family: 'Noto Serif TC', serif;
+    cursor: pointer;
+    position: relative;
+    transition: transform 0.3s ease, color 0.3s ease;
+    height: 60px;
+    line-height: 60px;
+    display: block;
+  }
+
+  .breadcrumbItem.active {
+    font-weight: bold;
+    color: #e96d14 !important; 
+  }
