class/coach RWD修改

--- a/app/classes/_components/_styles/calendar.module.css
+++ b/app/classes/_components/_styles/calendar.module.css
@@ -15,10 +15,10 @@
     border-bottom: 1px solid #eee;
   }
   
-  .container h2 {
+  .containerH2{
     color: #0b3760;
     margin-bottom: 10px;
-    font-size:  30px;
+    font-size: 35px;
     text-align: center;
   }
   
@@ -106,6 +106,7 @@
     font-weight: bold;
     margin-bottom: 5px;
   }
+
   .eventsWrapper {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
@@ -192,39 +193,77 @@
     margin-top: 5px;
   }
   
-  @media (max-width: 768px) {
-    .days {
-      gap: 0;
-    }
-    
-    .day {
-      min-height: 80px;
-      font-size: 0.8rem;
-    }
-    
-    .event {
-      padding: 3px;
-      font-size: 1rem;
-    }
-    .time {
-      font-size: 13px;
-      color: #fffcfc;
-      margin-top: 5px;
-    }
+ 
+@media (max-width: 768px) {
+  .containerH2{
+    font-size: 30px;
   }
   
-  @media (max-width: 375px) {
-    .container {
-      padding: 10px;
-    }
-    
-    .header {
-      flex-direction: column;
-      gap: 10px;
-      text-align: center;
-    }
-    
-    .day {
-      min-height: 60px;
-    }
+  .dateInfo {
+    font-size: 18px;
   }
+  
+  .nextWeek {
+    font-size: 24px;
+    height: 35px;
+  }
+  
+  .dayNumber {
+    font-size: 20px;
+  }
+  
+  .event {
+    min-height: 70px;
+    padding: 5px;
+    font-size: 18px;
+  }
+  
+  .eventsContainer {
+    min-height: 120px;
+  }
+}
+
+@media (max-width: 440px) {
+
+  .container h2 {
+    font-size: 22px;
+  }
+  .container {
+    padding: 5px;
+  }
+  
+  .header {
+    padding: 5px 0 ;
+    
+  }
+  
+  .dateInfo {
+    font-size: 16px;
+  }
+  
+  .nextWeek {
+    font-size: 20px;
+    height: 30px;
+  }
+  
+  .dayNumber {
+    font-size: 18px;
+  }
+  
+  .event {
+    min-height: 50px;
+    padding: 6px;
+    font-size: 18px;
+    font-weight: 400;;
+  }
+  
+  .eventsContainer {
+    min-height: 100px;
+  }
+  
+  .noEvent {
+    font-size: 22px;
+    padding-bottom: 10px;
+  }
+}
+
