--- a/app/classes/_styles/classes.module.css
+++ b/app/classes/_styles/classes.module.css
@@ -13,15 +13,11 @@
   flex-direction: column;
   flex-grow: 1;
 }
-.content h2{
-  text-align: center;
-  font-size: 35px;
-  margin-bottom: 15px;
-}
 
 .secTitle {
   font-size: 35px;
   margin-bottom: 15px;
+  text-align: center;
 }
 
 .searchSection {
@@ -64,9 +60,7 @@
 }
 
 @media (max-width: 768px) {
-  /* .container {
-    padding: 10px;
-  } */
+  
 
   .filterLabel {
     width: 50px;
@@ -79,4 +73,29 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0px 10px;
+}
+
+@media (max-width: 440px) {
+  .container {
+    padding: 2px;
+  }
+  
+  .secTitle {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .searchSection {
+    padding: 30px 10px 150px 10px;
+    height: 250px;
+  }
+  
+  .coachIcon {
+    width: 40px;
+    height: 40px;
+    margin-bottom: 10px;
+  }
+  
+  
+  
 }
