--- a/app/classes/_components/_styles/tabButton.module.css
+++ b/app/classes/_components/_styles/tabButton.module.css
@@ -33,3 +33,13 @@
     transform: translate3d(0, 100%, 0);
     z-index: 1;
   }
+
+  @media (max-width: 440px)  {
+
+
+    .tabButton {
+    
+    font-size: 20px;
+    height: 65px;
+  }
+  }
