--- a/app/coaches/_components/_styles/coach-detail.module.css
+++ b/app/coaches/_components/_styles/coach-detail.module.css
@@ -238,7 +238,7 @@
     }
   }
   
-  @media (max-width: 375px) {
+  @media (max-width: 440px) {
     .title {
       font-size: 2rem;
     }
@@ -253,6 +253,24 @@
     
     .cta-container {
       flex-direction: column;
+      
     }
+
+    .contact-button, .schedule-button {
+      font-size: 18px;
+      
+    }
+    .social-media {
+      gap: 25px;
+      margin-top: 30px;
+      margin-bottom: 20px;
+    }
+
+    .social-icon {
+      width: 50px;
+      height: 50px;
+      font-size: 25px;
+    }
+    
   }
   
