--- a/app/coaches/_components/_styles/coaches-card.module.css
+++ b/app/coaches/_components/_styles/coaches-card.module.css
@@ -115,3 +115,13 @@
     object-fit: cover;
     transition: transform 0.3s ease;
   }
+
+  @media (max-width: 440px){
+    .avatar-container {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      overflow: hidden;
+      border: 3px solid white;
+    }
+  }
