--- a/app/coaches/_components/_styles/pagination.module.css
+++ b/app/coaches/_components/_styles/pagination.module.css
@@ -1,38 +1,47 @@
-
 .pagination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    margin-top: 20px;
-    gap: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin-top: 20px;
+  gap: 5px;
 }
 
 .pageButton {
-    color: white;
-    background-color: #013056;
-    padding: 10px 15px;
-    border: 1px solid;
-    text-decoration: none;
-    font-size: 1rem;
-    transition: background-color 0.3s, transform 0.2s;
-    border-radius: 3px;
-    cursor: pointer;
+  color: white;
+  background-color: #013056;
+  padding: 10px 15px;
+  border: 1px solid;
+  text-decoration: none;
+  font-size: 1rem;
+  transition: background-color 0.3s, transform 0.2s;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 .pageButton:hover {
-    background-color: #db6318;
-    transform: scale(1.1);
+  background-color: #db6318;
+  transform: scale(1.1);
 }
 
 .active {
-    background-color: #db6318;
-    font-weight: bold;
-    cursor: default;
+  background-color: #db6318;
+  font-weight: bold;
+  cursor: default;
 }
 
 .disabled {
-    background-color: #8b8b8b;
-    cursor: not-allowed;
-    pointer-events: none;
+  background-color: #8b8b8b;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+@media (max-width: 440px) {
+  .pagination {
+    padding: 10px;
+    margin-top: 15px;
+    gap: 3px;
+    max-width: 100%;
+    flex-wrap: wrap;
+  }
 }
