--- a/app/products/[productId]/_components/_styles/rental-date.module.css
+++ b/app/products/[productId]/_components/_styles/rental-date.module.css
@@ -21,3 +21,10 @@
     font-weight: 600;
     font-size: 18px;
 }
+
+@media (width <= 960px) {
+    .dateSelect {
+      display: block;
+    }
+    
+  }
