--- a/app/classes/_components/_styles/calendar.module.css
+++ b/app/classes/_components/_styles/calendar.module.css
@@ -16,7 +16,7 @@
   }
   
   .containerH2{
-    color: #0b3760;
+    color: #142020;
     margin-bottom: 10px;
     font-size: 35px;
     text-align: center;
@@ -50,7 +50,7 @@
 
   .nextWeek[disabled] {
     opacity: 0.5;
-    cursor: not-allowed;
+    pointer-events: none;
     background-color: #f0f0f0;
     color: #999;
   }
@@ -152,10 +152,6 @@
     font-size: 18px;
     background-color: #adaaaa;
   }
-  .eventFull {
-    background-color: #999;
-    cursor: not-allowed;
-  }
   
   .capacity {
     margin-top: 4px;
@@ -163,12 +159,17 @@
   }
   
   .full {
-    color: #ff4d4f;
+    background-color: #999;
+    pointer-events: none;
+    color: #000;
     font-weight: bold;
+    border-right: none;
+    opacity: 0.7;
   }
   
   .available {
     color: #081a00;
+    
   }
   
   
