--- a/app/articles/styles/articles.module.css
+++ b/app/articles/styles/articles.module.css
@@ -5,7 +5,7 @@
   height: 400px;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 20px;
   align-items: flex-start;
   padding: 50px 60px;
@@ -86,6 +86,13 @@
   margin: auto;
   margin-bottom: 100px;
 }
+.loaderContainer{
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 50px;
+}
 
 /* #region ================= Search Start ====================== */
 .searchContainer {
@@ -104,7 +111,6 @@
   /* padding: 3px; */
   max-width: 250px;
   border-radius: 3px;
-  font-family: 'Noto Serif TC', serif;
   font-size: 18px;
   border: 2px rgb(221, 215, 215) solid;
 }
@@ -128,6 +134,7 @@
 
 .articleBottom {
   width: 100%;
+
   display: flex;
   position: relative;
 }
@@ -199,13 +206,13 @@
   border-bottom: #cdc9c9 1px solid;
   margin: auto;
   position: relative;
-  transition: all 0.3s;
+  transition: all 0.2s;
 }
 
 .selectPart li:hover {
   border-bottom: #48767b 2px solid;
   transform: translateY(-2px);
-  transition: all 0.3s;
+  transition: all 0.2s;
 }
 
 .selectPart li.active {
@@ -218,9 +225,14 @@
 /* #region ================= List  Start ====================== */
 
 .articleRight {
-  max-width: 80%;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 .articleList {
+  width: 100%;
   padding: 10px;
   margin-left: 20px;
   display: flex;
@@ -236,7 +248,7 @@
   color: white;
   background-color: #0b3760;
   padding: 5px 5px;
-  margin: 10px auto;
+  margin: 10px 0;
   border-radius: 3px;
   transition: all 0.3s;
   overflow: hidden;
@@ -370,11 +382,10 @@
     position: absolute;
     z-index: 20;
     background-color: #ebeff1;
-
     width: 90%;
   }
   .articleRight {
-    max-width: 100%;
+    width: 100%;
   }
   .categoryTitle {
     background-color: #dee5e7;
@@ -395,6 +406,11 @@
     width: 100%;
     border-right: none;
     text-align: left;
+  }
+}
+@media (max-width: 500px) {
+  .articleList {
+    justify-content: center;
   }
 }
 @media (max-width: 420) {
