更新GYM友modal 調整排版

--- a/app/chat/[chatroomId]/chatroom.module.css
+++ b/app/chat/[chatroomId]/chatroom.module.css
@@ -3,12 +3,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 .chatContainer {
   width: 100%;
   max-width: 400px;
-  height: 500px;
+  /* height: 500px; */
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
