--- a/app/carts/_components/_styles/cart-product-item.module.css
+++ b/app/carts/_components/_styles/cart-product-item.module.css
@@ -31,7 +31,7 @@
     aspect-ratio: 0.83;
     object-fit: contain;
     align-self: stretch;
-    width: 80px;
+    /* width: 80px; */
     margin: auto 0;
   }
   
