--- a/app/products/[productId]/_components/_styles/ProductCard.module.css
+++ b/app/products/[productId]/_components/_styles/ProductCard.module.css
@@ -4,7 +4,7 @@
     flex-shrink: 1;
     align-self: stretch;
     width: 250px;
-    height: 330px;
+    height: 350px;
     /* margin: auto; */
     /* padding: 10px; */
     overflow: hidden;
@@ -63,11 +63,11 @@
   .header {
     justify-content: space-between;
     align-items: start;
-    gap: 40px 48px;
     width: 100%;
     font-size: 14px;
     font-weight: 600;
     display: flex;
+    height: 50px;
   }
 
   .price{
@@ -94,9 +94,11 @@
     margin-top: 11px;
   }
   
-  @media (width <= 991px) {
-    .imageContainer {
-      padding-bottom: 100px;
+  @media (width <= 390px) {
+    .card{
+      width: 200px;
+      height: 350px;
+      margin: 0 10px;
     }
   }
   
