--- a/app/products/[productId]/_components/_styles/breadcrumb.module.css
+++ b/app/products/[productId]/_components/_styles/breadcrumb.module.css
@@ -69,3 +69,17 @@
   }
 
 }
+
+@media (width <= 390px) {
+  .breadcrumbContainer{
+    width: 100%;
+    margin: 0;
+  }
+  .breadcrumbItem a{
+    font-size: 16px;
+  }
+  .breadcrumbItem span{
+    font-size: 16px;
+  }
+
+}
